--- a/type2.html
+++ b/type2.html
@@ -3,48 +3,234 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>案②：王道の階層型</title>
+    <title>ホーム | 株式会社 新ニホンテック - 技術と誠意で75年</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        body { margin: 0; font-family: sans-serif; background: #fff; }
-        header { background: #004080; color: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; }
-        .menu-icon { font-size: 1.5rem; border: 1px solid white; padding: 2px 8px; border-radius: 4px; }
-        .hero { height: 300px; background: #eee; display: flex; justify-content: center; align-items: center; text-align: center; color: #555; border-bottom: 5px solid #004080; }
-        .container { padding: 20px; }
-        .news-list { list-style: none; padding: 0; }
-        .news-list li { border-bottom: 1px solid #ddd; padding: 10px 0; }
-        .btn-group { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
-        .btn-panel { flex: 1 1 40%; background: #f0f0f0; padding: 20px; text-align: center; border-radius: 5px; text-decoration: none; color: #333; font-weight: bold; }
-        .back-link { position: fixed; bottom: 20px; right: 20px; background: #333; color: white; padding: 10px; border-radius: 5px; text-decoration: none; z-index: 999; }
+        body { font-family: 'Noto Sans JP', sans-serif; }
     </style>
 </head>
-<body>
-    <a href="index.html" class="back-link">一覧に戻る</a>
-    <header>
-        <div>SHINNIHON TEC</div>
-        <div class="menu-icon">≡</div>
+<body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
+
+    <a href="index.html" class="fixed bottom-4 right-4 z-50 bg-gray-800 text-white px-4 py-2 rounded-full shadow-lg font-bold text-sm hover:bg-black transition">← 一覧に戻る</a>
+
+    <header class="bg-white shadow-sm sticky top-0 z-40">
+        <div class="container mx-auto px-4 h-16 flex justify-between items-center">
+            <a href="#" class="flex flex-col leading-none">
+                <span class="text-xs text-blue-600 font-bold tracking-wider">電気工事・自動制御・省エネ</span>
+                <span class="text-xl md:text-2xl font-bold text-slate-800">株式会社 新ニホンテック</span>
+            </a>
+
+            <nav class="hidden md:flex space-x-6 text-sm font-bold text-slate-600 items-center">
+                <a href="#" class="text-blue-600 border-b-2 border-blue-600 pb-1">ホーム</a>
+                <a href="#" class="hover:text-blue-600 transition">企業情報</a>
+                <a href="#" class="hover:text-blue-600 transition">事業案内</a>
+                <a href="#" class="hover:text-blue-600 transition">実績紹介</a>
+                <a href="#" class="hover:text-blue-600 transition">採用情報</a>
+                <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-700 transition shadow-md flex items-center">
+                    <i class="fas fa-envelope mr-2"></i> お問い合わせ
+                </a>
+            </nav>
+
+            <button class="md:hidden text-slate-600 text-2xl">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
     </header>
 
-    <div class="hero">
-        <div>
-            <h2>信頼と実績</h2>
-            <p>ここに会社の外観や<br>製品写真が入ります</p>
+    <div class="relative w-full h-[400px] md:h-[500px] bg-slate-800">
+        <img src="image1.jpg" alt="株式会社新ニホンテック 外観" class="w-full h-full object-cover opacity-60">
+        <div class="absolute inset-0 bg-gradient-to-r from-blue-900/80 to-transparent"></div>
+        <div class="absolute inset-0 flex items-center">
+            <div class="container mx-auto px-4">
+                <div class="max-w-2xl text-white">
+                    <span class="inline-block py-1 px-3 border border-white/50 rounded-full text-sm mb-4 bg-white/10 backdrop-blur-sm">創業75年の信頼と実績</span>
+                    <h1 class="text-3xl md:text-5xl font-bold leading-tight mb-6 drop-shadow-lg">
+                        技術と誠意で、<br>
+                        未来のインフラを支える。
+                    </h1>
+                    <p class="text-lg text-blue-100 mb-8 border-l-4 border-yellow-400 pl-4">
+                        電気工事から自動制御システム、CO2削減提案まで。<br>
+                        私たちは「プロ集団」として地域社会に貢献します。
+                    </p>
+                    <div class="flex flex-wrap gap-4">
+                        <a href="#" class="bg-yellow-500 text-blue-900 font-bold px-6 py-3 rounded hover:bg-yellow-400 transition">
+                            事業内容を見る
+                        </a>
+                        <a href="#" class="bg-white/20 hover:bg-white/30 text-white font-bold px-6 py-3 rounded backdrop-blur-sm transition border border-white/40">
+                            会社概要
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="container">
-        <h3>お知らせ</h3>
-        <ul class="news-list">
-            <li>2026.02.10 ホームページをリニューアルしました</li>
-            <li>2026.01.15 周年イベントのお知らせ</li>
-        </ul>
-
-        <h3>メニュー</h3>
-        <div class="btn-group">
-            <a href="#" class="btn-panel">会社案内</a>
-            <a href="#" class="btn-panel">事業内容</a>
-            <a href="#" class="btn-panel">採用情報</a>
-            <a href="#" class="btn-panel">お問い合わせ</a>
+    <section class="bg-white py-6 border-b">
+        <div class="container mx-auto px-4 flex flex-col md:flex-row items-start md:items-center">
+            <h2 class="text-lg font-bold text-slate-800 mr-6 flex-shrink-0 mb-2 md:mb-0">
+                <span class="text-blue-600 mr-2">●</span>NEWS
+            </h2>
+            <ul class="flex-1 space-y-2 w-full">
+                <li class="flex flex-col md:flex-row text-sm border-b border-dashed md:border-none pb-2 md:pb-0">
+                    <span class="text-gray-500 font-mono mr-4">2026.02.10</span>
+                    <a href="#" class="hover:text-blue-600 hover:underline">ホームページをリニューアルいたしました。</a>
+                </li>
+                <li class="flex flex-col md:flex-row text-sm">
+                    <span class="text-gray-500 font-mono mr-4">2026.01.15</span>
+                    <a href="#" class="hover:text-blue-600 hover:underline">創立記念イベントの様子を公開しました。</a>
+                </li>
+            </ul>
         </div>
-    </div>
+    </section>
+
+    <section class="py-16">
+        <div class="container mx-auto px-4">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl font-bold text-slate-800 mb-2">SERVICE</h2>
+                <p class="text-blue-600 font-bold">事業内容</p>
+                <p class="text-gray-500 mt-4 max-w-2xl mx-auto">
+                    公共工事から工場のメンテナンス、最新の省エネ提案まで。<br>
+                    お客様のニーズに確かな技術でお応えします。
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-8">
+                <a href="#" class="group bg-white rounded-lg shadow-sm hover:shadow-xl transition duration-300 border border-gray-100 overflow-hidden">
+                    <div class="h-48 bg-blue-50 flex items-center justify-center text-blue-200 overflow-hidden">
+                        <i class="fas fa-hard-hat text-6xl group-hover:scale-110 transition duration-500 text-blue-300"></i>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-slate-800 mb-3 group-hover:text-blue-600 transition">
+                            <i class="fas fa-bolt text-yellow-500 mr-2"></i>電気設備工事
+                        </h3>
+                        <p class="text-gray-600 text-sm leading-relaxed mb-4">
+                            公共施設、オフィスビル、工場の受変電設備から一般住宅の電気工事まで。安全・確実な施工を提供します。
+                        </p>
+                        <span class="text-blue-600 text-sm font-bold flex items-center">
+                            詳しく見る <i class="fas fa-arrow-right ml-2 text-xs"></i>
+                        </span>
+                    </div>
+                </a>
+
+                <a href="#" class="group bg-white rounded-lg shadow-sm hover:shadow-xl transition duration-300 border border-gray-100 overflow-hidden">
+                    <div class="h-48 bg-emerald-50 flex items-center justify-center text-emerald-200 overflow-hidden">
+                        <i class="fas fa-microchip text-6xl group-hover:scale-110 transition duration-500 text-emerald-300"></i>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-slate-800 mb-3 group-hover:text-emerald-600 transition">
+                            <i class="fas fa-cogs text-emerald-500 mr-2"></i>自動制御システム
+                        </h3>
+                        <p class="text-gray-600 text-sm leading-relaxed mb-4">
+                            工場の生産ラインや空調制御盤の設計・製作。シーケンス制御ソフトの設計から現場調整まで対応可能です。
+                        </p>
+                        <span class="text-emerald-600 text-sm font-bold flex items-center">
+                            詳しく見る <i class="fas fa-arrow-right ml-2 text-xs"></i>
+                        </span>
+                    </div>
+                </a>
+
+                <a href="#" class="group bg-white rounded-lg shadow-sm hover:shadow-xl transition duration-300 border border-gray-100 overflow-hidden">
+                    <div class="h-48 bg-cyan-50 flex items-center justify-center text-cyan-200 overflow-hidden">
+                        <i class="fas fa-leaf text-6xl group-hover:scale-110 transition duration-500 text-cyan-300"></i>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-slate-800 mb-3 group-hover:text-cyan-600 transition">
+                            <i class="fas fa-solar-panel text-cyan-500 mr-2"></i>環境・省エネ提案
+                        </h3>
+                        <p class="text-gray-600 text-sm leading-relaxed mb-4">
+                            CO2削減のプロとして、LED照明への切替や太陽光発電、デマンド監視など、最適な省エネプランを提案します。
+                        </p>
+                        <span class="text-cyan-600 text-sm font-bold flex items-center">
+                            詳しく見る <i class="fas fa-arrow-right ml-2 text-xs"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-slate-100 py-16">
+        <div class="container mx-auto px-4 grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-8 rounded-lg shadow-md">
+                <h3 class="text-2xl font-bold text-slate-800 mb-6">COMPANY</h3>
+                <table class="w-full text-sm text-left text-gray-600">
+                    <tbody>
+                        <tr class="border-b">
+                            <th class="py-3 font-bold w-1/3">会社名</th>
+                            <td class="py-3">株式会社 新ニホンテック</td>
+                        </tr>
+                        <tr class="border-b">
+                            <th class="py-3 font-bold">代表者</th>
+                            <td class="py-3">代表取締役 深澤 俊二</td>
+                        </tr>
+                        <tr class="border-b">
+                            <th class="py-3 font-bold">所在地</th>
+                            <td class="py-3">〒400-0057<br>山梨県甲府市高室町688-2</td>
+                        </tr>
+                        <tr>
+                            <th class="py-3 font-bold">電話番号</th>
+                            <td class="py-3">055-241-9231</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="#" class="mt-6 inline-block text-blue-600 font-bold hover:underline">
+                    会社概要詳細へ &rarr;
+                </a>
+            </div>
+
+            <div class="bg-blue-900 text-white p-8 rounded-lg shadow-md flex flex-col justify-center text-center relative overflow-hidden">
+                <div class="absolute top-0 right-0 -mr-10 -mt-10 w-40 h-40 bg-white opacity-10 rounded-full"></div>
+                <h3 class="text-2xl font-bold mb-4">RECRUIT</h3>
+                <p class="mb-6 text-blue-100">
+                    新ニホンテックでは、次世代の技術者を募集しています。<br>
+                    未経験からプロフェッショナルへ。
+                </p>
+                <a href="#" class="inline-block bg-white text-blue-900 font-bold py-3 px-8 rounded-full hover:bg-gray-100 transition shadow-lg mx-auto">
+                    採用情報を見る
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-slate-800 text-white py-10 mt-auto">
+        <div class="container mx-auto px-4">
+            <div class="grid md:grid-cols-4 gap-8 mb-8">
+                <div class="col-span-1 md:col-span-2">
+                    <h4 class="text-xl font-bold mb-4">株式会社 新ニホンテック</h4>
+                    <p class="text-sm text-gray-400 mb-4">
+                        〒400-0057 山梨県甲府市高室町688-2<br>
+                        TEL: 055-241-9231 / FAX: 055-241-9223
+                    </p>
+                    <div class="flex space-x-4">
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <h5 class="font-bold mb-3 text-gray-300">事業案内</h5>
+                    <ul class="text-sm text-gray-400 space-y-2">
+                        <li><a href="#" class="hover:text-white">電気設備工事</a></li>
+                        <li><a href="#" class="hover:text-white">自動制御システム</a></li>
+                        <li><a href="#" class="hover:text-white">省エネ・CO2削減</a></li>
+                        <li><a href="#" class="hover:text-white">消防施設工事</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h5 class="font-bold mb-3 text-gray-300">会社案内</h5>
+                    <ul class="text-sm text-gray-400 space-y-2">
+                        <li><a href="#" class="hover:text-white">代表挨拶</a></li>
+                        <li><a href="#" class="hover:text-white">会社概要</a></li>
+                        <li><a href="#" class="hover:text-white">沿革</a></li>
+                        <li><a href="#" class="hover:text-white">採用情報</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 pt-6 text-center text-xs text-gray-500">
+                &copy; Shin Nihon Tec Co., Ltd. All Rights Reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
