--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
         body { font-family: 'Noto Sans JP', sans-serif; }
+        .shine-effect {
+            position: relative;
+            overflow: hidden;
+        }
+        .shine-effect::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(to bottom right, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 40%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 60%, rgba(255,255,255,0) 100%);
+            transform: rotate(30deg);
+            animation: shine 3s infinite;
+        }
+        @keyframes shine {
+            0% { transform: translateX(-100%) rotate(30deg); }
+            100% { transform: translateX(100%) rotate(30deg); }
+        }
     </style>
 </head>
 <body class="bg-slate-100 text-slate-800 p-4 md:p-8">
@@ -16,10 +35,71 @@
     <div class="max-w-5xl mx-auto">
         <header class="text-center mb-10">
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">ホームページ デザイン構成案</h1>
-            <p class="text-slate-600">リニューアルの目的に合わせた4つのパターンを作成しました。</p>
-            <p class="text-slate-600">「デモ」と「実際の参考事例」を見比べてください。</p>
-            <p class="text-xs text-slate-400 mt-2">最終更新: 2026.02.10</p>
+            <p class="text-slate-600">ミーティングでの決定事項を反映した「最新案」を作成しました。</p>
+            <p class="text-xs text-slate-400 mt-2">最終更新: 2026.02.18</p>
         </header>
+
+        <div class="mb-12">
+            <h2 class="text-xl font-bold text-slate-700 mb-4 flex items-center">
+                <i class="fas fa-star text-yellow-500 mr-2"></i> 最新の推奨案 (採用候補)
+            </h2>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <a href="final.html" class="block group bg-gradient-to-br from-blue-900 to-blue-800 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative shine-effect transform hover:-translate-y-1">
+                    <div class="absolute top-0 right-0 bg-yellow-500 text-blue-900 text-xs font-bold px-4 py-1 rounded-bl-lg z-10">RECOMMENDED</div>
+                    <div class="p-8 h-full flex flex-col justify-between">
+                        <div class="mb-6 text-white">
+                            <div class="flex items-center mb-3">
+                                <span class="bg-yellow-400 text-blue-900 text-xs font-bold px-2 py-1 rounded mr-2">完成版</span>
+                                <h3 class="text-2xl font-bold">最新版デモ (内容反映済)</h3>
+                            </div>
+                            <p class="text-blue-100 text-sm leading-relaxed mb-4">
+                                Type1の構成＋Type4の演出に加え、<br>
+                                <strong>実際の原稿・写真・企業情報</strong>を反映した完成形です。
+                            </p>
+                            <div class="flex flex-wrap gap-2 text-xs font-bold opacity-90">
+                                <span class="bg-white/20 px-2 py-1 rounded">コンテンツ網羅</span>
+                                <span class="bg-white/20 px-2 py-1 rounded">スマホ対応</span>
+                                <span class="bg-white/20 px-2 py-1 rounded">80周年演出</span>
+                            </div>
+                        </div>
+                        <div class="bg-white text-blue-900 w-full px-4 py-3 rounded-xl font-bold shadow group-hover:bg-yellow-400 transition flex items-center justify-center">
+                            デモを見る <i class="fas fa-arrow-right ml-2"></i>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="type1-4.html" class="block group bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden relative border border-slate-200 transform hover:-translate-y-1">
+                    <div class="absolute top-0 right-0 bg-slate-600 text-white text-xs font-bold px-4 py-1 rounded-bl-lg z-10">LAYOUT</div>
+                    <div class="p-8 h-full flex flex-col justify-between">
+                        <div class="mb-6">
+                            <div class="flex items-center mb-3">
+                                <span class="bg-slate-200 text-slate-700 text-xs font-bold px-2 py-1 rounded mr-2">構成確認</span>
+                                <h3 class="text-2xl font-bold text-slate-800">統合ハイブリッド型</h3>
+                            </div>
+                            <p class="text-slate-600 text-sm leading-relaxed mb-4">
+                                <strong>Type 1</strong> (LP型) のレイアウトに、<br>
+                                <strong>Type 4</strong> のオープニング演出のみを組み合わせた構成案です。
+                            </p>
+                            <div class="flex flex-wrap gap-2 text-xs font-bold text-slate-500">
+                                <span class="bg-slate-100 px-2 py-1 rounded">Type1ベース</span>
+                                <span class="bg-slate-100 px-2 py-1 rounded">オープニング追加</span>
+                            </div>
+                        </div>
+                        <div class="bg-slate-100 text-slate-600 w-full px-4 py-3 rounded-xl font-bold group-hover:bg-slate-200 transition flex items-center justify-center">
+                            構成を確認 <i class="fas fa-arrow-right ml-2"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+        <hr class="border-slate-300 my-10">
+
+        <div>
+            <h2 class="text-lg font-bold text-slate-500 mb-6 flex items-center">
+                <i class="fas fa-history mr-2"></i> 検討の履歴 (比較用)
+            </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-12">
 
@@ -115,6 +195,7 @@
                 </div>
             </div>
 
+        </div>
         </div>
 
     </div>
