--- a/index.html
+++ b/index.html
@@ -41,35 +41,11 @@
 
         <div class="mb-12">
             <h2 class="text-xl font-bold text-slate-700 mb-4 flex items-center">
-                <i class="fas fa-star text-yellow-500 mr-2"></i> 最新の推奨案 (採用候補)
+                <i class="fas fa-star text-yellow-500 mr-2"></i> 採用候補
             </h2>
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <a href="final.html" class="block group bg-gradient-to-br from-blue-900 to-blue-800 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative shine-effect transform hover:-translate-y-1">
-                    <div class="absolute top-0 right-0 bg-yellow-500 text-blue-900 text-xs font-bold px-4 py-1 rounded-bl-lg z-10">RECOMMENDED</div>
-                    <div class="p-8 h-full flex flex-col justify-between">
-                        <div class="mb-6 text-white">
-                            <div class="flex items-center mb-3">
-                                <span class="bg-yellow-400 text-blue-900 text-xs font-bold px-2 py-1 rounded mr-2">完成版</span>
-                                <h3 class="text-2xl font-bold">最新版デモ (内容反映済)</h3>
-                            </div>
-                            <p class="text-blue-100 text-sm leading-relaxed mb-4">
-                                Type1の構成＋Type4の演出に加え、<br>
-                                <strong>実際の原稿・写真・企業情報</strong>を反映した完成形です。
-                            </p>
-                            <div class="flex flex-wrap gap-2 text-xs font-bold opacity-90">
-                                <span class="bg-white/20 px-2 py-1 rounded">コンテンツ網羅</span>
-                                <span class="bg-white/20 px-2 py-1 rounded">スマホ対応</span>
-                                <span class="bg-white/20 px-2 py-1 rounded">80周年演出</span>
-                            </div>
-                        </div>
-                        <div class="bg-white text-blue-900 w-full px-4 py-3 rounded-xl font-bold shadow group-hover:bg-yellow-400 transition flex items-center justify-center">
-                            デモを見る <i class="fas fa-arrow-right ml-2"></i>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="type1-4.html" class="block group bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden relative border border-slate-200 transform hover:-translate-y-1">
+                                <a href="type1-4.html" class="block group bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden relative border border-slate-200 transform hover:-translate-y-1">
                     <div class="absolute top-0 right-0 bg-slate-600 text-white text-xs font-bold px-4 py-1 rounded-bl-lg z-10">LAYOUT</div>
                     <div class="p-8 h-full flex flex-col justify-between">
                         <div class="mb-6">
@@ -88,6 +64,30 @@
                         </div>
                         <div class="bg-slate-100 text-slate-600 w-full px-4 py-3 rounded-xl font-bold group-hover:bg-slate-200 transition flex items-center justify-center">
                             構成を確認 <i class="fas fa-arrow-right ml-2"></i>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="final.html" class="block group bg-gradient-to-br from-blue-900 to-blue-800 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative shine-effect transform hover:-translate-y-1">
+                    <div class="absolute top-0 right-0 bg-yellow-500 text-blue-900 text-xs font-bold px-4 py-1 rounded-bl-lg z-10">RECOMMENDED</div>
+                    <div class="p-8 h-full flex flex-col justify-between">
+                        <div class="mb-6 text-white">
+                            <div class="flex items-center mb-3">
+                                <span class="bg-yellow-400 text-blue-900 text-xs font-bold px-2 py-1 rounded mr-2">最新版</span>
+                                <h3 class="text-2xl font-bold">開発中デモ (内容一部反映)</h3>
+                            </div>
+                            <p class="text-blue-100 text-sm leading-relaxed mb-4">
+                                Type1の構成＋Type4の演出に加え、<br>
+                                <strong>実際の原稿・写真・企業情報</strong>を反映したデモです。
+                            </p>
+                            <div class="flex flex-wrap gap-2 text-xs font-bold opacity-90">
+                                <span class="bg-white/20 px-2 py-1 rounded">コンテンツ網羅</span>
+                                <span class="bg-white/20 px-2 py-1 rounded">スマホ対応</span>
+                                <span class="bg-white/20 px-2 py-1 rounded">80周年演出</span>
+                            </div>
+                        </div>
+                        <div class="bg-white text-blue-900 w-full px-4 py-3 rounded-xl font-bold shadow group-hover:bg-yellow-400 transition flex items-center justify-center">
+                            デモを見る <i class="fas fa-arrow-right ml-2"></i>
                         </div>
                     </div>
                 </a>
