--- a/final.html
+++ b/final.html
@@ -71,6 +71,9 @@
         </div>
     </div>
 
+    <a href="index.html" class="fixed bottom-4 right-4 z-50 bg-slate-800 text-white px-4 py-2 rounded-full shadow-lg font-bold text-sm hover:bg-black transition">← 一覧に戻る</a>
+
+
     <header class="bg-white/95 backdrop-blur shadow-md fixed w-full z-50 transition-all duration-300">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <a href="#" class="text-xl md:text-2xl font-bold text-primary flex items-center group leading-none">
