[fix] fix index

--- a/index.html
+++ b/index.html
@@ -36,16 +36,41 @@
         <header class="text-center mb-10">
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">ホームページ デザイン構成案</h1>
             <p class="text-slate-600">ミーティングでの決定事項を反映した「最新案」を作成しました。</p>
-            <p class="text-xs text-slate-400 mt-2">最終更新: 2026.02.18</p>
+            <p class="text-xs text-slate-400 mt-2">最終更新: 2026.02.26</p>
         </header>
 
         <div class="mb-12">
             <h2 class="text-xl font-bold text-slate-700 mb-4 flex items-center">
-                <i class="fas fa-star text-yellow-500 mr-2"></i> 採用候補
+                <i class="fas fa-star text-yellow-500 mr-2"></i> 採用候補・最新版
             </h2>
-            
+
+            <a href="https://shin-nihon-tec-web.g25tk012.workers.dev/" target="_blank" class="block group bg-gradient-to-br from-emerald-800 to-teal-900 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative shine-effect transform hover:-translate-y-1 mb-8">
+                <div class="absolute top-0 right-0 bg-red-500 text-white text-xs font-bold px-4 py-1 rounded-bl-lg z-10">LATEST DEMO</div>
+                <div class="p-8 md:p-10 flex flex-col md:flex-row items-center justify-between gap-6">
+                    <div class="text-white flex-1">
+                        <div class="flex items-center mb-3">
+                            <span class="bg-red-500 text-white text-xs font-bold px-2 py-1 rounded mr-3">クラウド公開中</span>
+                            <h3 class="text-2xl md:text-3xl font-bold">最新デモサイト (本番サーバー環境)</h3>
+                        </div>
+                        <p class="text-teal-100 text-sm leading-relaxed mb-4">
+                            Cloudflare Pagesにて構築された本番稼働用のテストサイトです。<br>
+                            各イベントページの追加や、ディレクトリ構成の整理が完了した最新バージョンになります。
+                        </p>
+                        <div class="flex flex-wrap gap-2 text-xs font-bold opacity-90">
+                            <span class="bg-white/20 px-2 py-1 rounded">イベントページ実装</span>
+                            <span class="bg-white/20 px-2 py-1 rounded">コード最適化済</span>
+                            <span class="bg-white/20 px-2 py-1 rounded">スマホ完全対応</span>
+                        </div>
+                    </div>
+                    <div class="w-full md:w-auto">
+                        <div class="bg-white text-teal-900 px-8 py-4 rounded-xl font-bold shadow-lg group-hover:bg-teal-50 group-hover:scale-105 transition-all duration-300 flex items-center justify-center whitespace-nowrap">
+                            最新サイトを開く <i class="fas fa-external-link-alt ml-2"></i>
+                        </div>
+                    </div>
+                </div>
+            </a>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                <a href="type1-4.html" class="block group bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden relative border border-slate-200 transform hover:-translate-y-1">
+                <a href="type1-4.html" class="block group bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden relative border border-slate-200 transform hover:-translate-y-1">
                     <div class="absolute top-0 right-0 bg-slate-600 text-white text-xs font-bold px-4 py-1 rounded-bl-lg z-10">LAYOUT</div>
                     <div class="p-8 h-full flex flex-col justify-between">
                         <div class="mb-6">
@@ -68,17 +93,17 @@
                     </div>
                 </a>
 
-                <a href="final.html" class="block group bg-gradient-to-br from-blue-900 to-blue-800 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative shine-effect transform hover:-translate-y-1">
-                    <div class="absolute top-0 right-0 bg-yellow-500 text-blue-900 text-xs font-bold px-4 py-1 rounded-bl-lg z-10">RECOMMENDED</div>
+                <a href="final.html" class="block group bg-gradient-to-br from-blue-900 to-blue-800 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden relative transform hover:-translate-y-1">
+                    <div class="absolute top-0 right-0 bg-yellow-500 text-blue-900 text-xs font-bold px-4 py-1 rounded-bl-lg z-10">PREV VER.</div>
                     <div class="p-8 h-full flex flex-col justify-between">
                         <div class="mb-6 text-white">
                             <div class="flex items-center mb-3">
-                                <span class="bg-yellow-400 text-blue-900 text-xs font-bold px-2 py-1 rounded mr-2">最新版</span>
+                                <span class="bg-yellow-400 text-blue-900 text-xs font-bold px-2 py-1 rounded mr-2">ローカル版</span>
                                 <h3 class="text-2xl font-bold">開発中デモ (内容一部反映)</h3>
                             </div>
                             <p class="text-blue-100 text-sm leading-relaxed mb-4">
                                 Type1の構成＋Type4の演出に加え、<br>
-                                <strong>実際の原稿・写真・企業情報</strong>を反映したデモです。
+                                <strong>実際の原稿・写真・企業情報</strong>を反映した過去のデモです。
                             </p>
                             <div class="flex flex-wrap gap-2 text-xs font-bold opacity-90">
                                 <span class="bg-white/20 px-2 py-1 rounded">コンテンツ網羅</span>
@@ -87,7 +112,7 @@
                             </div>
                         </div>
                         <div class="bg-white text-blue-900 w-full px-4 py-3 rounded-xl font-bold shadow group-hover:bg-yellow-400 transition flex items-center justify-center">
-                            デモを見る <i class="fas fa-arrow-right ml-2"></i>
+                            ローカルデモを見る <i class="fas fa-arrow-right ml-2"></i>
                         </div>
                     </div>
                 </a>
